tests/samples/negative/functions/function_extern_definition_conflict.ax
module function_extern_definition_conflict;

extern c {
    @name("value")
    fn value() -> i32;
}

fn value() -> i32 {
    return 0;
}

fn main() -> i32 {
    return value();
}
